--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@expo/vector-icons": "^12.0.5",
     "@react-navigation/native": "^5.8.10",
     "@react-navigation/stack": "^5.12.8",
+    "date-fns": "^2.25.0",
     "expo": "~42.0.1",
     "expo-status-bar": "~1.0.4",
     "firebase": "^8.10.0",
